<resources>
    <string name="app_name">ShoppingBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shopping Buddy</string>
    <string name="nav_header_subtitle">Plan your week, shop stress free!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_all">Clear all</string>

    <string name="menu_weekly_planner">Weekly Planner</string>
    <string name="menu_recipe_library">Recipe Library</string>
    <string name="menu_shopping_list">Shopping List</string>
    <string name="menu_search_hint">Search recipes…</string>

    <string name="list_item_heading_placeholder">Heading</string>
    <string name="list_item_sub_heading_placeholder">Sub-heading</string>
    <string name="list_item_caption_placeholder">
        Proin vitae facilisis ex. Nullam in bibendum libero, ac gravida dolor.
        Donec convallis vel orci vitae tristique. Nulla rhoncus ex in tincidunt sodales.
    </string>

    <string name="fab_select_recipe_singular">1 recipe selected</string>
    <string name="fab_select_recipe_plural">%d recipes selected</string>

    <string name="select_image">Select image…</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_type">Recipe type</string>
    <string name="recipe_ingredient">Ingredient</string>
    <string name="recipe_ingredient_qty">Qty + Units</string>
    <string name="recipe_step">Step</string>

    <string name="take_picture">Take picture</string>
    <string name="from_gallery">From gallery</string>
    <string name="from_url">From URL</string>

    <string name="shopping_list_caption">Ingredients to buy this week…</string>

    <string name="required_field">This field is required!</string>
    <string name="invalid_units">e.g. 2 cups</string>
</resources>