<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/list_item_image"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ham_cheese_toast"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:id="@+id/list_item_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_heading_placeholder" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:id="@+id/list_item_sub_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/list_item_sub_heading_placeholder"/>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:id="@+id/list_item_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/list_item_caption_placeholder"
                    />

            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/list_item_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:id="@+id/list_item_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="128dp"
            android:background="@android:color/darker_gray"/>

</LinearLayout>