<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        card_view:cardElevation="8dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/list_item_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:id="@+id/list_item_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_heading_placeholder" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:id="@+id/list_item_sub_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/list_item_sub_heading_placeholder"/>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:id="@+id/list_item_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/list_item_caption_placeholder"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/list_item_drag_handle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:src="@drawable/ic_drag_handle"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>